--- a/grid3.html
+++ b/grid3.html
@@ -8,35 +8,12 @@
     <link rel="stylesheet" href="./CSS/grid3.css" />
   </head>
   <body>
-    <!--Intermediate Grid-->
+    <!--Advanced Grid-->
     <div class="container">
-      <div>Lorem ipsum dolor sit amet.</div>
-      <div>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorum
-        obcaecati aliquam praesentium, voluptas eius commodi nihil nobis fuga
-        velit quibusdam ad repellendus autem vitae delectus! Blanditiis
-        assumenda animi ex. Perspiciatis quas similique error! Eligendi quidem
-        eaque architecto distinctio doloremque asperiores autem corporis labore
-        at voluptates incidunt animi deleniti voluptatum dolorum aperiam
-        suscipit quod amet alias, ex illum porro ipsa. Cumque tempora, quas
-        excepturi hic ullam dolorum iusto doloremque et, reiciendis repudiandae
-        ab voluptates totam sequi nisi voluptatibus, suscipit velit commodi vero
-        laborum quo voluptatum ipsum est assumenda. Labore officiis consequatur
-        hic. Velit magnam totam eaque, eligendi animi fuga et magni quidem ipsa
-        fugit fugiat, culpa maxime debitis vel harum voluptate nam amet repellat
-        ab ex eius optio ipsam ad atque!
-      </div>
-      <div>
-        <div class="nested">
-          <div>Lorem, ipsum.</div>
-          <div>Lorem, ipsum.</div>
-          <div>Lorem, ipsum.</div>
-        </div>
-      </div>
-      <div>Lorem ipsum dolor sit amet.</div>
-      <div>Lorem ipsum dolor sit amet.</div>
-      <div>Lorem ipsum dolor sit amet.</div>
-      <div>Lorem ipsum dolor sit amet.</div>
+      <div class="box box1">Box 1</div>
+      <div class="box box2">Box 2</div>
+      <div class="box box3">Box 3</div>
+      <div class="box box4">Box 4</div>
     </div>
   </body>
 </html>
